			ROX-Session
			A very simple session manager
			by Thomas Leonard

16-Apr-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

12-Apr-2003
~~~~~~~~~~~
GTK theme option is now a menu of possible choices.

05-Mar-2003
~~~~~~~~~~~
Added Framer to the default list of window managers.

27-Feb-2003
~~~~~~~~~~~
French translation of AppInfo (Vincent Lefèvre).

25-Feb-2003
~~~~~~~~~~~
Added Russian translation (Alexey Lubimov).

13-Feb-2003
~~~~~~~~~~~
Added DnD threshold and GTK theme XSettings. Updated to new Options code
(fixes minor bug with the language indicator).

11-Feb-2003
~~~~~~~~~~~
Shade power buttons if no command is set (KRJW).

29-Dec-2002
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

20-Dec-2002
~~~~~~~~~~~
Run ROX-Filer from a separate RunROX script. This allows ROX-Session to offer
to restart the filer if it crashes. If you've made your own Login file, remove
the lines to run ROX-Filer from it.

09-Dec-2002 (Release 0.1.18)
~~~~~~~~~~~
Style improvements to options window.

04-Dec-2002
~~~~~~~~~~~
Added a German translation (Guido Schimmels).

29-Nov-2002
~~~~~~~~~~~
Remove the '?' image from the dialog box; it made it too cluttered (suggested
by Alastair Porter).

28-Nov-2002
~~~~~~~~~~~
Automatically create a default panel containing ROX-Session, some mount
points and the new ROX Guide.

25-Nov-2002
~~~~~~~~~~~
Added widget to test mouse double-click speed (suggested by Tony Houghton).
Added Halt, Reboot and Sleep buttons (requested by Jim Lesurf and others).

05-Nov-2002
~~~~~~~~~~~
Added OpenBox to list of window managers.

06-Oct-2002
~~~~~~~~~~~
Added Dutch translation (Jan Wagemakers).

25-Sep-2002
~~~~~~~~~~~
Added options to control mouse acceleration.

12-Sep-2002 (Release 0.1.17)
~~~~~~~~~~~
Switch to log window display if too many messages are shown.
Increase history size limit.

11-Sep-2002
~~~~~~~~~~~
Add timestamps to log messages in history window (suggested by krjw).

05-Aug-2002
~~~~~~~~~~~