@@ -2,6 +2,12 @@
 			A very simple session manager
 			by Thomas Leonard
 
+17-Apr-2003
+~~~~~~~~~~~
+Update logging code to handle GTK+-2.2 (so ROX-Session doesn't try to log
+its own errors and deadlock).
+Only show themes with a gtk-2.0 subdirectory.
+
 16-Apr-2003
 ~~~~~~~~~~~
 Updated Dutch translation (Jan Wagemakers).
